# polytope-escape

./: .gitignore  README.md  pyproject.toml
src/polyscape/: __init__.py  typing.py
src/polyscape/agents/: utils.py
src/polyscape/agents/v0/: mlp.py
src/polyscape/api/train/: ppo.py  reinforce.py  reinforce_with_baseline.py
src/polyscape/cli/: __init__.py  train.py  utils.py
src/polyscape/environment/: polyscape.py
src/polyscape/optim/: adam.py  schedules.py  sgd.py
tests/unit/agents/: test_v0_agents.py
tests/unit/environment/: test_envs.py
